<resources>
    <string name="app_name">MovieSewa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="people">People</string>
    <string name="search">Search</string>
    <string name="discover_explore_now">discover.Explore now.</string>
    <string name="shows_and_people_to">Shows and people to</string>
    <string name="millions_of_movies_tv">Millions of movies, TV</string>
    <string name="welcome">Welcome.</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="search_results">Search Results</string>
    <string name="daily">day</string>
    <string name="weekly">week</string>

</resources>