<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/open_hem"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/dimen_24"
        >

        <LinearLayout
            android:id="@+id/initialTextsLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_32sp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/millions_of_movies_tv"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_24sp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/shows_and_people_to"
                android:layout_marginTop="@dimen/dimen_4"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_24sp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/discover_explore_now"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dimen_4"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_24sp"
                />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            app:layout_constraintTop_toBottomOf="@id/initialTextsLayout"
            android:hint="Search for a movie,tv show.."
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@drawable/search_bg"
            android:layout_marginEnd="@dimen/dimen_16"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_24"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40"
            android:background="@drawable/search_bg"
            app:layout_constraintTop_toBottomOf="@id/initialTextsLayout"
            android:layout_marginTop="@dimen/dimen_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dimen_16"
            android:backgroundTint="@color/search_button_bg_color"
            android:text="@string/search"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trendingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trending"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/bg_view"
            android:textStyle="bold"
            android:textColor="@color/navy_blue"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_24"
            />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchOnOff"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textOn="@string/week"
            android:textOff="@string/day"
            app:switchTextAppearance="@style/textFormatting"
            app:showText="true"
            android:thumb="@drawable/thumb_selector"
            app:layout_constraintTop_toTopOf="@id/trendingText"
            app:layout_constraintBottom_toBottomOf="@id/trendingText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dimen_16"
            app:switchMinWidth="200dp"
            app:track="@drawable/track_selector" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trendingText"
            android:orientation="horizontal"
            android:id="@+id/movesRecyclerView"
            android:layout_marginTop="@dimen/dimen_16"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>